--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1118,6 +1118,8 @@ label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: 1px solid !important;
+  cursor: pointer;
 }
 
 .about-image {
