--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -854,6 +854,8 @@ $border-main-color: #bbb;
     width: 100%;
     position: relative;
     display: flex;
+    border-bottom: 1px solid !important;
+    cursor: pointer;
 }
 .about-image{
     width: 50%;
