--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -78,6 +78,7 @@ img{
     padding: 0 !important;
     background-color: rgba(0,0,0,.055);
     margin-bottom: 0 !important;
+    width: 200px;
 }
 Button{
     margin-top: 3px;
