--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -694,8 +694,8 @@ label {
   position: sticky;
   top: 0;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 150px;
-          flex: 1 1 150px;
+      -ms-flex: 1 1 20vw;
+          flex: 1 1 20vw;
 }
 
 .ImagesPreview--imageContainer__empty {
@@ -1413,6 +1413,9 @@ label {
   }
   .image-hide {
     display: none;
+  }
+  .ImagesPreview--imageContainer {
+    height: 200px;
   }
 }
 /*# sourceMappingURL=main.css.map */
