--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -864,10 +864,51 @@ label {
   height: 30px;
 }
 
+@-webkit-keyframes image-hide {
+  0% {
+    left: 100%;
+  }
+  50% {
+    -webkit-transform: translateY(200%);
+            transform: translateY(200%);
+  }
+  100% {
+    height: 0;
+  }
+}
+
+@keyframes image-hide {
+  0% {
+    left: 100%;
+  }
+  50% {
+    -webkit-transform: translateY(200%);
+            transform: translateY(200%);
+  }
+  100% {
+    height: 0;
+  }
+}
+
+.move-left {
+  -webkit-animation-name: move-left;
+          animation-name: move-left;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
 .image-hide {
-  -webkit-transform: translateY(200%);
-          transform: translateY(200%);
+  -webkit-animation-name: image-hide;
+          animation-name: image-hide;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
   cursor: default;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .low-opacity {
