--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -667,10 +667,31 @@ $border-main-color: #bbb;
   width : 21px;
   height : 30px;
 }
+@keyframes image-hide{
+    0% {
+        left: 100%;
+    }
+    50% {
+         transform: translateY(200%);
+    }
+    100% {
+        height: 0;
+    }
+}
+.move-left{
+    animation-name: move-left;
+    animation-duration: 0.2s;
+    animation-timing-function: ease-out;
+    // animation-timing-function: steps(3, end);
+}
 
 .image-hide{
-    transform: translateY(200%);
+    animation-name: image-hide;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-out;
+    // transform: translateY(200%);
     cursor: default;
+    animation-fill-mode: forwards;
 }
 
 .low-opacity{
