--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1219,6 +1219,23 @@ label {
   bottom: 0;
 }
 
+.dark-bg {
+  background-color: black;
+  height: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.white-font {
+  color: white !important;
+  font-weight: bold;
+  padding-left: 5px;
+}
+
 @media only screen and (max-width: 720px) {
   body {
     overscroll-behavior: contain;
