--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1268,7 +1268,7 @@ label {
     -webkit-transition: 0.3s all;
     transition: 0.3s all;
     border-right: 1px solid;
-    max-height: calc(100vh - 7px);
+    max-height: calc(100vh - 53px);
   }
   .TagsMenu-max {
     height: calc(100vh - 150px - 50px);
@@ -1474,6 +1474,12 @@ label {
   }
   .ImagesPreview--imageContainer {
     height: 200px;
+  }
+  .ArtworkInfo--descriptions {
+    font-size: 12px;
+  }
+  .ArtworkInfo_locationYear {
+    font-size: 10px;
   }
 }
 /*# sourceMappingURL=main.css.map */
