--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -531,10 +531,11 @@ $border-main-color: #bbb;
     transition: 0 opacity;
     z-index: 2;
     overflow: hidden;
-    max-height: 200px;
+    height: 200px;
     position: sticky;
     top: 0;
     flex: 1 1 20vw;
+
 }
 .ImagesPreview--imageContainer__empty{
     // border: 2px solid red;
@@ -848,16 +849,15 @@ $border-main-color: #bbb;
     // font-size: 14px;
 }
 .ArtworkInfo_artworkFamily{
-    font-size: 14px;
+    font-size: 12px;
     line-height: 16px;
 }
 .ArtworkInfo_artworkTitle{
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 14px;
 }
 .ArtworkInfo_locationYear{
     font-size: 12px;
-    margin-top: 10px;
+    // margin-top: 10px;
 }
 .Tags-item_wrapper{
     display: flex;
@@ -1116,7 +1116,8 @@ $border-main-color: #bbb;
         display: none;
     }
     .ImagesPreview--imageContainer{
-        height: 200px;
+        height: auto;
+        max-height: 200px;
     }
     .ArtworkInfo--descriptions{
         font-size: 12px;
