--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -696,6 +696,8 @@ label {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 20vw;
           flex: 1 1 20vw;
+  text-indent: -100%;
+  overflow: hidden;
 }
 
 .ImagesPreview--imageContainer__empty {
