--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -524,7 +524,6 @@ $border-main-color: #bbb;
 .ImagesPreview--imageContainer{
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     justify-content: flex-end;
     align-items: center;
     transition: 0.4s all;
@@ -546,7 +545,7 @@ $border-main-color: #bbb;
     max-height: 200px;
     position: sticky;
     top: 0;
-    flex: 1 1 150px;
+    // flex: 1 1 150px;
 }
 .ImagesPreview--imageContainer__empty > *{
     transform: translateY(200px) !important;
@@ -676,11 +675,8 @@ $border-main-color: #bbb;
     0% {
         left: 100%;
     }
-    50% {
-         transform: translateY(200%);
-    }
     100% {
-        height: 0;
+         transform: translateY(200%);
     }
 }
 .move-left{
