--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -165,6 +165,26 @@ Button {
   border: none !important;
 }
 
+.btn:hover {
+  border: 0px !important;
+  text-decoration: none !important;
+}
+
+.btn-link:hover {
+  border: 0px !important;
+  text-decoration: none !important;
+}
+
+.btn:focus {
+  border: 0px !important;
+  text-decoration: none !important;
+}
+
+.btn-link:focus {
+  border: 0px !important;
+  text-decoration: none !important;
+}
+
 .card-body {
   padding: 0 10px !important;
   background-color: white !important;
@@ -489,6 +509,15 @@ label {
   border-left: 1px solid;
 }
 
+.tagsMenu-Button_subcategory-last {
+  padding: 0 !important;
+  margin: 0 !important;
+  text-transform: uppercase !important;
+  font-weight: 600 !important;
+  border-right: 1px solid;
+  border-left: 1px solid;
+}
+
 .tagsMenu-list {
   font-family: 'Courier', Courier, monospace;
   text-transform: uppercase;
@@ -496,6 +525,25 @@ label {
   border-left: 1px solid;
   border-right: 1px solid;
   margin: 0;
+}
+
+.tagsMenu-list input {
+  margin-left: 8px;
+}
+
+.tags-li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: auto;
+}
+
+.tagsMenu-list-tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .tagsMenu-listItem {
@@ -509,10 +557,38 @@ label {
   line-height: 12px;
   margin-bottom: 2px;
   position: relative;
+  padding: 4px;
+  border: 1px solid;
+  margin: 4px;
+  cursor: pointer;
 }
 
 .tagsMenu-listItem:hover {
-  border-bottom: 1px solid black;
+  background-color: #a54b9a;
+}
+
+.TagsMenu-Card-Title:hover {
+  background-color: #a54b9a;
+}
+
+.checkbox-selected {
+  background-color: #c877bf;
+}
+
+.tagsMenu-Button_category * {
+  font-size: 26px !important;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.tagsMenu-Button_subcategory .title-letter {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.tagsMenu-Button_subcategory-last .title-letter {
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .subcategory {
@@ -1268,13 +1344,14 @@ label {
     -webkit-transition: 0.3s all;
     transition: 0.3s all;
     border-right: 1px solid;
-    max-height: calc(100vh - 53px);
+    max-height: calc(100vh - 124px);
+    border-bottom: none;
   }
   .TagsMenu-max {
     height: calc(100vh - 150px - 50px);
   }
   .TagsMenu-Card-Title {
-    height: 50px;
+    height: 37px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1289,7 +1366,9 @@ label {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 50px;
+    height: 33px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
   }
   .images-container {
     -ms-grid-row: 2;
@@ -1459,12 +1538,16 @@ label {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 50px;
+    background-color: white;
     border-bottom: 1px solid !important;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     cursor: pointer;
+  }
+  .about-container:hover {
+    background-color: #a54b9a;
+    border-bottom: 1px solid;
   }
   .about-image {
     width: 150px;
