--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -116,20 +116,29 @@ Button{
 .card{
     border: none !important;
 }
-.accordion{
-    // border-right: 1px solid;
-    // border-left: 1px solid;
-}
 .btn{
     border: none !important;
+}
+.btn:hover{
+    border: 0px !important;
+    text-decoration: none !important;
+}
+.btn-link:hover{
+    border: 0px !important;
+    text-decoration: none !important;
+}
+.btn:focus{
+    border: 0px !important;
+    text-decoration: none !important;
+}
+.btn-link:focus{
+    border: 0px !important;
+    text-decoration: none !important;
 }
 .card-body{
     padding: 0 10px !important;
     background-color: white !important;
     border-bottom: 1px solid;
-}
-.TagsMenu-Card{
-
 }
 .TagsMenu-Card-Title{
     display: flex;
@@ -370,6 +379,14 @@ $border-main-color: #bbb;
     border-right: 1px solid;
     border-left: 1px solid;
 }
+.tagsMenu-Button_subcategory-last{
+    padding: 0 !important;
+    margin: 0 !important;
+    text-transform: uppercase !important;
+    font-weight: 600 !important;
+    border-right: 1px solid;
+    border-left: 1px solid;
+}
 .tagsMenu-list{
     font-family: 'Courier', Courier, monospace;
     text-transform: uppercase;
@@ -378,6 +395,17 @@ $border-main-color: #bbb;
     border-right: 1px solid;
     margin: 0;
 }
+.tagsMenu-list input{
+    margin-left: 8px;
+}
+.tags-li{
+    flex: 1;
+    height: auto;
+}
+.tagsMenu-list-tags{
+    display: flex;
+    flex-wrap: wrap;
+}
 .tagsMenu-listItem{
     display: flex;
     justify-content: space-between;
@@ -385,9 +413,37 @@ $border-main-color: #bbb;
     line-height: 12px;
     margin-bottom: 2px;
     position: relative;
+    padding: 4px;
+    border: 1px solid;
+    margin: 4px;
+    cursor: pointer;
 }
 .tagsMenu-listItem:hover{
-    border-bottom: 1px solid black;
+    // border-bottom: 1px solid black;
+    background-color: #a54b9a;
+}
+.TagsMenu-Card-Title:hover{
+    background-color: #a54b9a;
+}
+.checkbox-selected{
+    background-color: #c877bf;
+}
+.tagsMenu-Button_category *{
+font-size: 26px !important;
+font-weight: 600;
+font-family: 'Times New Roman', Times, serif;
+}
+// .tagsMenu-Button_category .title-letter{
+//     font-size: inherit;
+//     font-weight: inherit;
+//     font-family: inherit;
+// }
+.tagsMenu-Button_subcategory .title-letter{
+    font-size: 18px;
+    font-weight: 600;
+}.tagsMenu-Button_subcategory-last .title-letter{
+    font-size: 18px;
+    font-weight: 600;
 }
 .subcategory{
     border-left: 1px solid;
@@ -612,18 +668,6 @@ $border-main-color: #bbb;
     transition: 0.4s all;
 }
 
-
-.background-image{
-    // height: 100%;
-    // width: 100%;
-    // max-height: 100%;
-}
-.foreground-image{
-    // width: 100%;
-    // height: 100%;
-    // max-height: 100%;
-}
-
 .imageSelect-FilePreview{
 
     transition: 0.4s all;
@@ -715,10 +759,6 @@ $border-main-color: #bbb;
     font-size: 16px !important;
     font-family: 'Courier', Courier, monospace;
     // transform: scale(0.8, 0.7);
-}
-.title-letter{
-    // font-size: 60px;
-    // transform: scale(1.65, 2.5);
 }
 
 
@@ -840,14 +880,6 @@ $border-main-color: #bbb;
     text-indent: 15px;
     margin-top: 10px;
 }
-.ArtworkInfo--familyDescription{
-    // margin: 1vw 2vw;
-    // font-size: 14px;
-}
-.ArtworkInfo--artworkDescription{
-    // margin: 1vw 2vw;
-    // font-size: 14px;
-}
 .ArtworkInfo_artworkFamily{
     font-size: 12px;
     line-height: 16px;
@@ -961,13 +993,14 @@ $border-main-color: #bbb;
         transform: translateY(-100%);
         transition: 0.3s all;
         border-right: 1px solid;
-        max-height: calc(100vh - 53px);
+        max-height: calc(100vh - 124px);
+        border-bottom: none;
     }
     .TagsMenu-max{
         height: calc(100vh - 150px - 50px);
     }
     .TagsMenu-Card-Title{
-        height: 50px;
+        height: 37px;
         align-items: center;
     }
     .TagsMenu-checkbox_subcategory, .TagsMenu-checkbox {
@@ -976,7 +1009,9 @@ $border-main-color: #bbb;
     .tagsMenu-listItem{
         display: flex;
         align-items: center;
-        height: 50px;
+        height: 33px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
     }
     .images-container{
         grid-row-start: 2;
@@ -1107,10 +1142,15 @@ $border-main-color: #bbb;
         width: 100%;
         position: relative;
         display: flex;
-        height: 50px;
+        // height: 50px;
+        background-color: white;
         border-bottom: 1px solid !important;
         align-items: center;
         cursor: pointer;
+    }
+    .about-container:hover{
+        background-color: #a54b9a;
+        border-bottom: 1px solid;
     }
     .about-image{
         width: 150px;
