--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -787,6 +787,7 @@ label {
   position: sticky;
   top: 0;
   z-index: -9999;
+  height: 0;
 }
 
 .ImagesPreview--imageContainer__empty > * {
@@ -1306,6 +1307,7 @@ label {
   color: white !important;
   font-weight: bold;
   padding-left: 5px;
+  white-space: nowrap;
 }
 
 .halfSize {
@@ -1422,7 +1424,7 @@ label {
         -ms-flex-direction: column;
             flex-direction: column;
     overflow-x: auto;
-    height: 70px;
+    height: 90px;
   }
   .enlargeContainer {
     -ms-grid-column: 1;
@@ -1523,7 +1525,7 @@ label {
   }
   .side-scroll .imageSelect-FilePreview {
     width: auto !important;
-    max-height: 70px;
+    max-height: 90px;
   }
   .images-container {
     display: -ms-grid;
@@ -1558,6 +1560,9 @@ label {
   .ImagesPreview--imageContainer {
     height: auto;
     max-height: 200px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 30vw;
+            flex: 1 1 30vw;
   }
   .ArtworkInfo--descriptions {
     font-size: 12px;
@@ -1567,6 +1572,10 @@ label {
   }
   .side-scroll .ImagesPreview--imageContainer__empty {
     width: 2px;
+  }
+  .info-up {
+    opacity: 1;
+    bottom: 20px;
   }
 }
 /*# sourceMappingURL=main.css.map */
