--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1517,10 +1517,14 @@ label {
     transition: 0.4s all;
   }
   .imageSelect-FilePreview {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    -o-object-position: bottom left;
+       object-position: bottom left;
     height: 100%;
   }
   .side-scroll .imageSelect-FilePreview {
-    width: auto !important;
+    width: 100% !important;
     z-index: 9999;
   }
   .images-container {
@@ -1536,16 +1540,11 @@ label {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    background-color: white;
-    border-bottom: 1px solid !important;
+    background-color: lime;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     cursor: pointer;
-  }
-  .about-container:hover {
-    background-color: #dddddd;
-    border-bottom: 1px solid;
   }
   .about-image {
     width: 150px;
@@ -1554,9 +1553,9 @@ label {
     display: none;
   }
   .ImagesPreview--imageContainer {
-    height: auto;
-    max-height: 30%;
+    top: initial;
     left: 0;
+    max-width: 45%;
   }
   .ArtworkInfo--descriptions {
     font-size: 12px;
@@ -1566,6 +1565,7 @@ label {
   }
   .side-scroll .ImagesPreview--imageContainer__empty {
     width: 2px;
+    height: 33%;
   }
   .info-up {
     opacity: 1;
