--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1570,5 +1570,13 @@ label {
   .info-up {
     opacity: 1;
   }
+  .side-scroll-min img {
+    position: initial;
+    left: initial;
+    max-height: 90px;
+  }
+  .side-scroll-min .ImagesPreview--imageContainer {
+    left: initial;
+  }
 }
 /*# sourceMappingURL=main.css.map */
