--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -338,7 +338,7 @@ $border-main-color: #bbb;
 }
 
 *{
-    color: black !important;
+    color: black;
 }
 
 .TagsMenu-container{
@@ -388,7 +388,8 @@ $border-main-color: #bbb;
     border-left: 1px solid;
 }
 .tagsMenu-list{
-    font-family: 'Courier', Courier, monospace;
+    font-family: 'Arial', Helvetica, sans-serif;
+    font-size: 12px;
     text-transform: uppercase;
     list-style-type: none;
     border-left: 1px solid;
@@ -416,7 +417,6 @@ $border-main-color: #bbb;
     padding: 4px;
     border: 1px solid;
     margin: 4px;
-    cursor: pointer;
 }
 .tagsMenu-listItem:hover{
     // border-bottom: 1px solid black;
@@ -427,6 +427,9 @@ $border-main-color: #bbb;
 }
 .checkbox-selected{
     background-color: #e3e3e3;
+}
+.about-container:hover{
+    background-color: #ffe0ef;
 }
 .tagsMenu-Button_category *{
 font-size: 26px !important;
@@ -441,9 +444,11 @@ font-family: 'Times New Roman', Times, serif;
 .tagsMenu-Button_subcategory .title-letter{
     font-size: 18px;
     font-weight: 600;
+    color: rgb(90, 90, 90);
 }.tagsMenu-Button_subcategory-last .title-letter{
     font-size: 18px;
     font-weight: 600;
+    color: rgb(90, 90, 90);
 }
 .subcategory{
     border-left: 1px solid;
@@ -622,6 +627,7 @@ font-family: 'Times New Roman', Times, serif;
     right: 0;
     background-color: white;
     border-left: $border-dark;
+    justify-content: center;
     // border-right: $border-dark;
     // border-top: $border-dark;
 
@@ -758,7 +764,8 @@ font-family: 'Times New Roman', Times, serif;
     width: 100%;
     font-weight: 400 !important;
     font-size: 16px !important;
-    font-family: 'Courier', Courier, monospace;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(102, 102, 102) !important;
     // transform: scale(0.8, 0.7);
 }
 
@@ -965,6 +972,38 @@ font-family: 'Times New Roman', Times, serif;
 .halfSize{
     max-width: 50%;
 }
+.previewBubble{
+    height: 10px;
+    width: 10px;
+    // border: 2px solid white;
+    border-radius: 999px;
+    margin: 5px;
+    flex: 1 1 15px;
+    background-color: rgb(192, 192, 192);
+    opacity: 0.5;
+    cursor: pointer;
+}
+.previewBubble-container{
+    display: flex;
+    position: absolute;
+    bottom: 2px;
+    z-index: 9999;
+    overflow-x: auto;
+}
+.previewBubble-filled{
+    background-color: pink;
+}
+.clickable{
+    cursor: pointer;
+}
+.noClick{
+    border: 0;
+    cursor: default;
+}
+.clear-all{
+    height: 50px;
+    text-transform: uppercase;
+}
 
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
@@ -1011,7 +1050,7 @@ font-family: 'Times New Roman', Times, serif;
         display: flex;
         align-items: center;
         height: 33px;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Arial', 'Helvetica', sans-serif;
         font-size: 12px;
     }
     .images-container{
